--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,5 +9,8 @@
         "src": "/(.*)",
         "dest": "/"
       }
-    ]
+    ],
+    
+    "routes":[{"src":"/[^.]+","dest":"/","status":200}]
+
   }
